--- a/html/user/set.html
+++ b/html/user/set.html
@@ -33,18 +33,31 @@
             <!-- 登入后的状态 -->
             <li class="layui-nav-item">
                 <a class="fly-nav-avatar" href="javascript:;">
-                    <cite class="layui-hide-xs"></cite>
+                    <cite class="layui-hide-xs">
+                        <span class="layui-badge-dot"></span>
+                    </cite>
                     <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+
                 </a>
+                <div id="tip-header-wrapper" style="display:none">
+                    <span class="layui-badge-dot" style="right: -16px"></span>
+                </div>
                 <dl class="layui-nav-child">
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
-                    <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
-                                                          style="top: 4px;"></i>我的消息</a></dd>
+                    <dd>
+                        <a href="../user/message.html">
+                            <i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的通知
+                            <span class="layui-badge-dot"></span>
+                            <span id="tip-header-notice"  style="display:none">
+                                 <span class="layui-badge-dot"></span>
+                            </span>
+                        </a>
+                    </dd>
                     <dd><a href="../user/home.html"><i class="layui-icon"
                                                        style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
-                    <dd><a href="login.html" style="text-align: center;">退出</a></dd>
+                    <dd><a href="" style="text-align: center;">退出</a></dd>
                 </dl>
             </li>
         </ul>
@@ -75,11 +88,13 @@
             <a href="message.html">
                 <i class="layui-icon">&#xe667;</i>
                 我的通知
+                <span id="tip-left-notice">
+                </span>
             </a>
         </li>
         <li class="layui-nav-item">
             <a href="care.html">
-                <i class="layui-icon">&#xe611;</i>
+                <i class="layui-icon">&#xe770;</i>
                 我的关注
             </a>
         </li>
